# janetrs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  bors.toml  crates.js  help.html  rustfmt.toml  search-index.js  settings.html  source-files.js  src-files.js
.github/: FUNDING.yml
bstr/: all.html  fn.B.html  fn.concat.html  fn.decode_last_utf8.html  fn.decode_utf8.html  fn.join.html  index.html  struct.BStr.html  struct.BString.html  struct.Bytes.html  struct.CharIndices.html  struct.Chars.html  struct.DrainBytes.html  struct.EscapeBytes.html  struct.Fields.html  struct.FieldsWith.html  struct.Find.html  struct.FindReverse.html  struct.Finder.html  struct.FinderReverse.html  struct.FromUtf8Error.html  struct.GraphemeIndices.html  struct.Graphemes.html  struct.Lines.html  struct.LinesWithTerminator.html  struct.SentenceIndices.html  struct.Sentences.html  struct.Split.html  struct.SplitN.html  struct.SplitNReverse.html  struct.SplitReverse.html  struct.Utf8Chunk.html  struct.Utf8Chunks.html  struct.Utf8Error.html  struct.WordIndices.html  struct.Words.html  struct.WordsWithBreakIndices.html  struct.WordsWithBreaks.html  trait.ByteSlice.html  trait.ByteVec.html
evil_janet/: all.html  constant.JANET_64.html  constant.JANET_BUFFER_FLAG_NO_REALLOC.html  constant.JANET_BUILD.html  constant.JANET_CURRENT_CONFIG_BITS.html  constant.JANET_EV_TCTAG_BOOLEAN.html  constant.JANET_EV_TCTAG_ERR_KEYWORD.html  constant.JANET_EV_TCTAG_ERR_STRING.html  constant.JANET_EV_TCTAG_ERR_STRINGF.html  constant.JANET_EV_TCTAG_INTEGER.html  constant.JANET_EV_TCTAG_KEYWORD.html  constant.JANET_EV_TCTAG_NIL.html  constant.JANET_EV_TCTAG_STRING.html  constant.JANET_EV_TCTAG_STRINGF.html  constant.JANET_FILE_APPEND.html  constant.JANET_FILE_BINARY.html  constant.JANET_FILE_CLOSED.html  constant.JANET_FILE_NONIL.html  constant.JANET_FILE_NOT_CLOSEABLE.html  constant.JANET_FILE_PIPED.html  constant.JANET_FILE_READ.html  constant.JANET_FILE_SERIALIZABLE.html  constant.JANET_FILE_UPDATE.html  constant.JANET_FILE_WRITE.html  constant.JANET_FRAME_SIZE.html  constant.JANET_FUNCDEF_FLAG_HASCLOBITSET.html  constant.JANET_FUNCDEF_FLAG_HASDEFS.html  constant.JANET_FUNCDEF_FLAG_HASENVS.html  constant.JANET_FUNCDEF_FLAG_HASNAME.html  constant.JANET_FUNCDEF_FLAG_HASSOURCE.html  constant.JANET_FUNCDEF_FLAG_HASSOURCEMAP.html  constant.JANET_FUNCDEF_FLAG_HASSYMBOLMAP.html  constant.JANET_FUNCDEF_FLAG_NEEDSENV.html  constant.JANET_FUNCDEF_FLAG_STRUCTARG.html  constant.JANET_FUNCDEF_FLAG_TAG.html  constant.JANET_FUNCDEF_FLAG_VARARG.html  constant.JANET_FUNCFLAG_TRACE.html  constant.JANET_HANDLE_NONE.html  constant.JANET_INTMAX_DOUBLE.html  constant.JANET_INTMAX_INT64.html  (+781 more)
examples/: hello_world.rs
janetrs/: all.html  attr.cjvg.html  attr.janet_fn.html  attr.janet_version.html  enum.JanetSignal.html  enum.JanetType.html  enum.TaggedJanet.html  index.html  macro.array.html  macro.bad_slot!.html  macro.bad_slot.html  macro.check_janet_version!.html  macro.check_janet_version.html  macro.declare_janet_mod!.html  macro.declare_janet_mod.html  macro.janet_mod!.html  macro.janet_mod.html  macro.jcatch!.html  macro.jcatch.html  macro.jpanic!.html  macro.jpanic.html  macro.jtry!.html  macro.jtry.html  macro.structs!.html  macro.structs.html  macro.table.html  macro.tuple.html  sidebar-items.js  struct.Janet.html  struct.JanetAbstract.html  struct.JanetArray.html  struct.JanetBuffer.html  struct.JanetConversionError.html  struct.JanetFiber.html  struct.JanetFunction.html  struct.JanetGc.html  struct.JanetGcLockGuard.html  struct.JanetGcRootGuard.html  struct.JanetKeyword.html  struct.JanetPointer.html  (+12 more)
janetrs_macros/: Cargo.toml  README.md  all.html  attr.cjvg.html  attr.janet_fn.html  attr.janet_version.html  index.html  macro.check_janet_version.html  macro.declare_janet_mod.html  sidebar-items.js
janetrs_macros/src/: lib.rs  utils.rs  version.rs
janetrs_macros/tests/: 00-test  01-paths  01-paths.stderr  02-not-function  02-not-function.stderr  03-not-mut  03-not-mut.stderr  04-not-ref  04-not-ref.stderr  05-wrong-args  05-wrong-args.stderr  06-not-slice  06-not-slice.stderr  07-mod  08-wrong-args  08-wrong-args.stderr  09-version-wrong  09-version-wrong.stderr  10-declare-janet-module  11-declare_mod_errors  11-declare_mod_errors.stderr  progress.rs
janetrs_version/: Cargo.toml  all.html  index.html  sidebar-items.js  struct.JanetBuildConfig.html  struct.JanetVersion.html
janetrs_version/src/: lib.rs
libc/: all.html  constant.ABDAY_1.html  constant.ABDAY_2.html  constant.ABDAY_3.html  constant.ABDAY_4.html  constant.ABDAY_5.html  constant.ABDAY_6.html  constant.ABDAY_7.html  constant.ABMON_1.html  constant.ABMON_10.html  constant.ABMON_11.html  constant.ABMON_12.html  constant.ABMON_2.html  constant.ABMON_3.html  constant.ABMON_4.html  constant.ABMON_5.html  constant.ABMON_6.html  constant.ABMON_7.html  constant.ABMON_8.html  constant.ABMON_9.html  constant.ABS_CNT.html  constant.ABS_MAX.html  constant.ACCOUNTING.html  constant.ADDR_COMPAT_LAYOUT.html  constant.ADDR_LIMIT_32BIT.html  constant.ADDR_LIMIT_3GB.html  constant.ADDR_NO_RANDOMIZE.html  constant.ADFS_SUPER_MAGIC.html  constant.ADJ_ESTERROR.html  constant.ADJ_FREQUENCY.html  constant.ADJ_MAXERROR.html  constant.ADJ_MICRO.html  constant.ADJ_NANO.html  constant.ADJ_OFFSET.html  constant.ADJ_OFFSET_SINGLESHOT.html  constant.ADJ_OFFSET_SS_READ.html  constant.ADJ_SETOFFSET.html  constant.ADJ_STATUS.html  constant.ADJ_TAI.html  constant.ADJ_TICK.html  (+5596 more)
memchr/: all.html  fn.memchr.html  fn.memchr2.html  fn.memchr2_iter.html  fn.memchr3.html  fn.memchr3_iter.html  fn.memchr_iter.html  fn.memrchr.html  fn.memrchr2.html  fn.memrchr2_iter.html  fn.memrchr3.html  fn.memrchr3_iter.html  fn.memrchr_iter.html  index.html  struct.Memchr.html  struct.Memchr2.html  struct.Memchr3.html
proc_macro2/: all.html  enum.Delimiter.html  enum.Spacing.html  enum.TokenTree.html  index.html  struct.Group.html  struct.Ident.html  struct.LexError.html  struct.Literal.html  struct.Punct.html  struct.Span.html  struct.TokenStream.html
quote/: all.html  index.html  (+6 more)
src/: env.rs  (+7 more)
(+971 files in other folders)
