[package]
name = "janetrs"
version = "0.2.0"
authors = ["Eric Shimizu Karbstein <gr41.j4ck@gmail.com>"]
description = "High level binding for Janet programming language"
repository = "https://github.com/GrayJack/janetrs"
homepage = "https://crates.io/crates/janetrs"
documentation = "https://docs.rs/janetrs"
license-file = "LICENSE"
readme = "README.md"
edition = "2018"
keywords = ["janet", "embedding", "ffi"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu", "x86_64-unknown-freebsd",
    "x86_64-unknown-netbsd", "x86_64-apple-darwin", "x86_64-sun-solaris",
    "aarch64-unknown-linux-gnu", "i686-unknown-linux-gnu",
    "x86_64-pc-windows-gnu", "x86_64-pc-windows-msvc"]
all-features = false
features = ["amalgation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evil-janet = "1.15.4"
const_fn = "0.4"
bstr = { version = "0.2.15", default-features = false }
janetrs_macros = "0.2.0"
janetrs_version = "0.1.0"

[dev-dependencies]

[features]
default = ["std", "unicode"]
# To use Error trait and alocations
std = ["bstr/std"]
# Use to statically link to janet runtime and have Janet client
amalgation = ["evil-janet/link-amalg"]
# Inline more functions
inline-more = []
# Unicode conveniences
unicode = ["bstr/unicode"]
# Use system janet.h
system = ["evil-janet/system", "janetrs_macros/system", "janetrs_version/system"]
# Use to link to system libjanet (not recommended generally)
link-system = ["evil-janet/link-system", "janetrs_macros/system"]

[workspace]
members = ["janetrs_macros", "janetrs_version"]

[[example]]
name = "hello_world"
required-features = ["amalgation"]
