[package]
name = "janetrs"
version = "0.3.2"
authors = ["Eric Shimizu Karbstein <gr41.j4ck@gmail.com>"]
description = "High level binding for Janet programming language"
repository = "https://github.com/GrayJack/janetrs"
homepage = "https://crates.io/crates/janetrs"
documentation = "https://docs.rs/janetrs"
license-file = "LICENSE"
readme = "README.md"
edition = "2018"
keywords = ["janet", "embedding", "ffi"]
categories = ["api-bindings"]
exclude = ["/.github", "/.vscode"]

[package.metadata.docs.rs]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-unknown-freebsd",
    "x86_64-unknown-netbsd",
    "x86_64-apple-darwin",
    "x86_64-unknown-illumos",
    "aarch64-unknown-linux-gnu",
    "i686-unknown-linux-gnu",
    "x86_64-pc-windows-gnu",
    "x86_64-pc-windows-msvc",
]
all-features = false
features = ["amalgation", "nightly", "_doc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = { version = "0.2.16", default-features = false }
const_fn = "0.4"
evil-janet = "1.16"
janetrs_macros = "0.4.4"
janetrs_version = "0.1.0"
libc = { version = "0.2", features = ["extra_traits"] }
rand_core = "0.6"

[dev-dependencies]

[features]
default = ["std", "unicode"]
# To use Error trait and alocations
std = ["bstr/std"]
# Use to statically link to janet runtime and have Janet client
amalgation = ["evil-janet/link-amalg"]
# Inline more functions
inline-more = []
# Unicode conveniences
unicode = ["bstr/unicode"]
# Use system janet.h
system = [
    "evil-janet/system",
    "janetrs_macros/system",
    "janetrs_version/system",
]
# Use to link to system libjanet (not recommended generally)
link-system = [
    "evil-janet/link-system",
    "janetrs_macros/system",
    "janetrs_version/system",
]
# Crate features that depends of a nightly gated features
nightly = []
# Only used to document the feature flagged functions/modules/traits/types
_doc = []

[workspace]
members = ["janetrs_macros", "janetrs_version"]

[[example]]
name = "hello_world"
required-features = ["amalgation"]
