[package]
name = "janetrs_version"
version = "0.1.0"
authors = ["Eric Shimizu Karbstein <gr41.j4ck@gmail.com>"]
description = "Janet version types for JanetRS"
repository = "https://github.com/GrayJack/janetrs"
homepage = "https://crates.io/crates/janetrs_macros"
documentation = "https://docs.rs/janetrs_macros"
license-file = "../LICENSE"
edition = "2018"
keywords = ["janet", "utils"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evil-janet = "1"
const_fn = "0.4"

[features]
default = []
system = ["evil-janet/system"]